--- a/src/index.html
+++ b/src/index.html
@@ -135,7 +135,7 @@
 
       })(window, window['lib'] || (window['lib'] = {}));
   </script>
-  <script src="http://res.yy.com/libs/vconsole/vconsole.min.js"></script>
+  <script src="//res.yy.com/libs/vconsole/vconsole.min.js"></script>
 </head>
 <body>
   <div id="app"></div>
